# rooms2d-bot

./: .env  .gitignore  Cargo.toml  Makefile.toml  README.md
src/: main.rs
src/commands/: help.rs  mod.rs  rooms.rs
