[package]
name = "rooms-bot"
version = "0.1.0"
authors = ["asheraryam <asheraryam@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.release]
# opt-level = 'z'  # Optimize for size.
# lto = true
# panic = 'abort'

[dependencies]
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2" # needed so intrument works with async functions.

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.10.2"
features = ["cache", "framework", "standard_framework", "rustls_backend", "unstable_discord_api"]